Nested cross validation

--- a/Comparison Results.ipynb
+++ b/Comparison Results.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6f1022f3727f293347cfd86361e45a7003cfdef376e985665d47c59895b5b867"
+  "signature": "sha256:2a16c7dc1ee84e7244bb3a379989d9209832726402e4db8402ab06d38f965c73"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -579,6 +579,777 @@
       }
      ],
      "prompt_number": 10
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "a = [1,2,3,4,2,4,4]\n",
+      "\n",
+      "def most_common(lst):\n",
+      "    return max(set(lst), key=lst.count)\n",
+      "\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "TypeError",
+       "evalue": "count() takes exactly one argument (0 given)",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-12-aedb9dd6712e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlst\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlst\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcount\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0ma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcount\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;31mTypeError\u001b[0m: count() takes exactly one argument (0 given)"
+       ]
+      }
+     ],
+     "prompt_number": 12
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import numpy as np\n",
+      "\n",
+      "angles = np.arange(-35,35, 0.1)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 13
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "angles\n",
+      "\n",
+      "distances = 700*[30]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 15
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "distances"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 16,
+       "text": [
+        "[30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30,\n",
+        " 30]"
+       ]
+      }
+     ],
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
