nested cv exp designed

--- a/misc.ipynb
+++ b/misc.ipynb
@@ -708,6 +708,30 @@
     {
      "cell_type": "code",
      "collapsed": false,
+     "input": [
+      "import numpy as np\n",
+      "a = [1.6345, 1.6197, 1.6492, 1.6592, 1.6386]\n",
+      "b = [1.8467, 1.8294, 1.8361, 1.8394]\n",
+      "\n",
+      "np.mean(b)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 2,
+       "text": [
+        "1.8378999999999999"
+       ]
+      }
+     ],
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
      "input": [],
      "language": "python",
      "metadata": {},
